<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.healing.ticortreat.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_file" />

    <Button
        android:text="@string/audio_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/audioTrackbutton" />

    <TextView
        android:text="@string/select_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/audioFileTextView"
        android:layout_alignBottom="@+id/audioTrackbutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/start_treatment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/audioFileTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp"
        android:id="@+id/treatmentStartButton" />

    <ImageButton
        android:id="@+id/stepStartButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/treatmentStartButton"
        android:layout_marginBottom="48dp"
        android:layout_marginTop="12dp"
        android:src="@mipmap/ic_launcher"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:visibility="invisible"
        tools:layout_marginTop="24dp" />

    <TextView
        android:text="@string/centering_then_contact_with_the_receiver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/PositionTextView" />
</RelativeLayout>
